# genesis_dns

./: README.md  requirements.txt  setup.cfg  tox.ini
.github/workflows/: build.yml  publish-to-pypi.yml  tests.yaml
etc/genesis_dns/: genesis_dns.conf  logging.yaml
etc/powerdns/: genesis.conf
etc/systemd/: genesis-dns-user-api.service
genesis/: genesis.yaml
genesis/images/: install.sh
genesis_dns/: version.py
genesis_dns/cmd/: bootstrap.py  user_api.py
genesis_dns/common/: config.py  constants.py  permissions.py
genesis_dns/dm/: models.py
genesis_dns/user_api/api/: app.py  controllers.py  routes.py
migrations/: 0000-init-tables-40a307.py
