[metadata]
name = genesis_dns
summary = Genesis DNS: easy to use public/authoritative/private DNSaaS.
description_file =
    README.md
long_description_content_type = text/markdown
author = Genesis Corporation
author_email = mail@gmelikov.ru
home_page = https://github.com/infraguys/genesis_dns/
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13


[files]
packages =
    genesis_dns


[entry_points]
console_scripts =
    genesis-dns-user-api = genesis_dns.cmd.user_api:main
    genesis-dns-bootstrap = genesis_dns.cmd.bootstrap:main
